--- a/.env.example
+++ b/.env.example
@@ -13,15 +13,29 @@ DB_MAX_OPEN_CONNS=25
 DB_MAX_IDLE_CONNS=5
 DB_CONN_MAX_LIFETIME=5m
 
+# Circuit Breaker
+DB_CIRCUIT_BREAKER_ENABLED=true
+DB_MAX_FAILURES=5
+DB_FAILURE_THRESHOLD=0.5
+DB_RESET_TIMEOUT=30
+
 # REDIS CACHE
 ENABLE_REDIS=false
 REDIS_HOST=localhost
 REDIS_PORT=6379			
 REDIS_PASSWORD=			
-REDIS_DB=0			
+REDIS_DB=0	
+
+# Test DB
+TEST_DB_PASSWORD=your_secure_password
+TEST_DB_USER=auth_user
+TEST_DB_HOST=localhost
+TEST_DB=auth_test_db
+
+
 # JWT Configuration
-JWT_ACCESS_SECRET=change-this-to-a-secure-random-string-at-least-32-chars
-JWT_REFRESH_SECRET=change-this-to-another-secure-random-string-at-least-32-chars
+SESSION_BINDING_ENABLED=false
+JWT_ACCESS_SECRET=X7sP3kQbN9rT2yV5zX8cW6mJhGfEaBdC0123456789ab
 JWT_ACCESS_EXPIRY=15m
 JWT_REFRESH_EXPIRY=168h
 
@@ -31,13 +45,18 @@ BCRYPT_COST=12
 # CORS
 CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:8080
 CORS_ALLOWED_METHODS=GET,POST,PUT,DELETE,PATCH,OPTIONS
-CORS_ALLOWED_HEADERS=Content-Type,Authorization
+CORS_ALLOWED_HEADERS=Content-Type,Authorization,X-CSRF-Token
 
 # Logging
 LOG_LEVEL=info
 LOG_ENCODING=json
-
+# Audit Logging
+AUDIT_LOG_ENABLED=true
+AUDIT_LOG_PATH=audit.log
+AUDIT_LOG_FORMAT=json
 # Observability
 ENABLE_METRICS=true
 ENABLE_TRACING=false
-OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318
+
+# Trusted Proxies
+SERVER_TRUSTED_PROXIES=127.0.0.1,172.16.0.0/12
